# vmsgs

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in  version.h.in
include/: macros.h
include/interface/: control.h  embodied.h  localization.h  map.h  perception.h  planning.h  sensor.h  system.h  tf2.h  v2x.h  vehicle.h
schemas/common/: color.proto  header.fbs  header.proto  key_value.proto  metric.proto  published_time.proto  response_status.proto  stamped_primitives.proto  status.proto  time.proto  uuid.proto  version.proto
schemas/control/: ackermann_control_command.proto  control_horizon.proto  external_control_command.proto  gate_mode.proto  lateral_command.proto  longitudinal_command.proto  operation_mode.proto  pause_state.proto
schemas/embodied/: end_effector.proto  gripper.proto  joint_trajectory.proto  locomotion.proto  manipulator_state.proto  multi_dof_joint_trajectory.proto  nl_instruction.proto  observation_frame.fbs  rgbd_frame.fbs  robot_state.proto  skill.proto  tactile_array.fbs  task.proto  teleop.proto  vla_action.proto
schemas/geometry/: accel.proto  geometry.fbs  inertia.proto  point.proto  polygon.proto  pose.proto  quaternion.proto  stamped_primitives.proto  transform.proto  twist.proto  vector2.proto  vector3.proto  wrench.proto
schemas/localization/: ekf_state.proto  initial_pose.proto  initialization_state.proto  kinematic_state.proto  lidar_pose_accuracy.proto  localization_quality.proto  odometry.proto
schemas/map/: area_info.proto  elevation_map.fbs  lanelet.proto  lanelet_map.fbs  lanelet_map_meta.proto  map_meta_data.proto  map_projector_info.proto  occupancy_grid_map.fbs  point_cloud_map.fbs  point_cloud_map_meta.proto
schemas/perception/: cost_map.fbs  detected_object.proto  free_space.proto  lane_segments.proto  object_classification.proto  object_with_feature.proto  occupancy_grid.fbs  predicted_object.proto  predicted_traffic_light.proto  road_marking.proto  semantic_image.fbs  shape.proto  tracked_object.proto  traffic_light.proto  traffic_light_roi.proto  voxel_grid.fbs
schemas/planning/: avoidance.proto  behavior_state.proto  candidate_trajectory.proto  cooperate_status.proto  lateral_offset.proto  mission.proto  path.proto  path_with_lane_id.proto  planning_factor.proto  pose_with_uuid.proto  reroute_availability.proto  route.proto  scenario.proto  stop_reason.proto  trajectory.proto  velocity_factor.proto  velocity_limit.proto
schemas/sensor/: battery_state.proto  camera_info.proto  compressed_audio.fbs  compressed_image.fbs  compressed_video.fbs  concatenated_point_cloud_info.proto  depth_image.fbs  event_array.fbs  fluid_pressure.proto  gnss_ins_orientation.proto  illuminance.proto  image.fbs  imu.proto  joint_state.proto  joy.proto  laser_scan.proto  magnetic_field.proto  multi_dof_joint_state.proto  multi_echo_laser_scan.proto  nav_sat_fix.proto  point_cloud2.fbs  point_field.fbs  radar_object.proto  radar_scan.fbs  radar_tracks.proto  range.proto  raw_audio.fbs  relative_humidity.proto  sensor_status.proto  temperature.proto  time_reference.proto
schemas/system/: autoware_state.proto  command_mode.proto  diag_graph.proto  diagnostic.proto  emergency_state.proto  hazard_status.proto  heartbeat.proto  log.proto  mission_remaining.proto  mode_change.proto  mrm_behavior_status.proto  mrm_state.proto  operation_mode_availability.proto  process_info.proto  resource_usage.proto  service_log.proto
schemas/tf2/: tf_error.proto  tf_message.proto
schemas/v2x/: cooperative_status.proto  external_api.proto  infrastructure_command.proto  v2x_message.proto  virtual_gate.proto  virtual_traffic_light.proto
schemas/vehicle/: actuation.proto  control_mode.proto  door.proto  door_layout.proto  engage.proto  gear_command.proto  hand_brake.proto  hazard_lights.proto  headlights.proto  horn.proto  steering_report.proto  steering_wheel.proto  turn_indicators.proto  vehicle_emergency.proto  vehicle_kinematics.proto  vehicle_odometry.proto  vehicle_specs.proto  vehicle_status.proto  velocity_report.proto  wheel_linear_speed.proto  wipers.proto
src/: schema_plugin_impl.cc
src/interface/: empty.cc
tools/: check.sh  format.sh
